interpreter-janeklang/tests/good/07_refVar_1.janek
void incrementByValue(int a) {
    a = a + 1;
    return;
}

void incrementByReference(ref int b) {
    b = b + 1;
    return;
}

int main() {
    int a = 10;
    incrementByValue(a);
    print(a);
    incrementByReference(a);
    print(a);
    return 0;
}
