interpreter-janeklang/tests/bad/03_IntAsBool_2.janek
int main(){
    int asd = 420;
    bool b = asd;
    return 0;
}